Re-extract features using train and test

--- a/Haojun - CNN.ipynb
+++ b/Haojun - CNN.ipynb
@@ -510,35 +510,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_layer_outs = extract_all_features(X, model, [5, 8, 10, 12, 14])"
+    "layer_outs_train = extract_all_features(X_train, model, [5, 8, 10, 12, 14])\n",
+    "layer_outs_test = extract_all_features(X_test, model, [5, 8, 10, 12, 14])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conv, dense500, dense200, dense100, dense50 = all_layer_outs\n",
-    "conv = conv.reshape(conv.shape[0], -1)"
+    "conv, dense500, dense200, dense100, dense50 = layer_outs_train\n",
+    "conv = conv.reshape(conv.shape[0], -1)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense500_train.txt\", dense500)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense200_train.txt\", dense200)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense100_train.txt\", dense100)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense50_train.txt\", dense50)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/label_train.txt\", Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np.savetxt(\"/Users/haojun/Downloads/conv.txt\", conv)\n",
-    "np.savetxt(\"/Users/haojun/Downloads/dense500.txt\", dense500)\n",
-    "np.savetxt(\"/Users/haojun/Downloads/dense200.txt\", dense200)\n",
-    "np.savetxt(\"/Users/haojun/Downloads/dense100.txt\", dense100)\n",
-    "np.savetxt(\"/Users/haojun/Downloads/dense50.txt\", dense50)\n",
-    "np.savetxt(\"/Users/haojun/Downloads/label.txt\", Y)"
+    "conv, dense500, dense200, dense100, dense50 = layer_outs_test\n",
+    "conv = conv.reshape(conv.shape[0], -1)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense500_test.txt\", dense500)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense200_test.txt\", dense200)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense100_test.txt\", dense100)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/dense50_test.txt\", dense50)\n",
+    "np.savetxt(\"/Users/haojun/Downloads/label_test.txt\", Y_test)"
    ]
   },
   {
