Added some experiments but not that good

--- a/Haojun - CNN - midi (no longer used).ipynb
+++ b/Haojun - CNN - midi (no longer used).ipynb
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "m1 = model1(input_shape=(1024, 88, 2))\n",
-    "m1.compile(optimizer='adam', loss='binary_crossentropy', metrics=['binary_accuracy'])"
+    "m1.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['binary_accuracy'])"
    ]
   },
   {
