Switched dataset trained cnn

--- a/Haojun_Preprocessing.ipynb
+++ b/Haojun_Preprocessing.ipynb
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23733de72b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12969d198>"
       ]
      },
      "execution_count": 3,
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23733e794a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12d14e278>"
       ]
      },
      "execution_count": 4,
@@ -186,23 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing genre blues\n",
-      "processing genre classical\n",
-      "processing genre country\n",
-      "processing genre disco\n",
-      "processing genre hiphop\n",
-      "processing genre jazz\n",
-      "processing genre metal\n",
       "processing genre pop\n",
+      "processing genre metal\n",
+      "processing genre disco\n",
+      "processing genre blues\n",
       "processing genre reggae\n",
-      "processing genre rock\n"
+      "processing genre classical\n",
+      "processing genre rock\n",
+      "processing genre hiphop\n",
+      "processing genre country\n",
+      "processing genre jazz\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
     "    j = 0\n",
     "    for i in range(len(sub_dirs)):\n",
     "        print('processing genre {0}'.format(sub_dirs[i]))\n",
-    "        if sub_dirs[i] in ['classical', 'disco', 'rock', 'pop', 'country']:\n",
+    "        if sub_dirs[i] in ['classical', 'hiphop', 'metal', 'pop', 'blues']:\n",
     "            X_is = transform_musics('genres/{0}/'.format(sub_dirs[i]))\n",
     "            X = np.concatenate((X, X_is), axis=0)\n",
     "            Y_is = np.zeros((X_is.shape[0], c))\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -259,12 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('data_mat/X2.npy', X)\n",
-    "np.save('data_mat/Y2.npy', Y)"
+    "np.save('data_mat/X3.npy', X)\n",
+    "np.save('data_mat/Y3.npy', Y)"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
