moved data to data directory

--- a/after_cnn_classic-Copy1.ipynb
+++ b/after_cnn_classic-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,40 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "train_test/label_train.txt not found.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-d42f979cbf47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mY_train_1hot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'train_test/label_train.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mY_test_1hot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'train_test/label_test.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mY_train_1hot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_test_1hot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/gavin/miniconda3/envs/cs229_project/lib/python2.7/site-packages/numpy/lib/npyio.pyc\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding)\u001b[0m\n\u001b[1;32m    924\u001b[0m             \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    925\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_string_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 926\u001b[0;31m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_datasource\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    927\u001b[0m             \u001b[0mfencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'encoding'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    928\u001b[0m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/gavin/miniconda3/envs/cs229_project/lib/python2.7/site-packages/numpy/lib/_datasource.pyc\u001b[0m in \u001b[0;36mopen\u001b[0;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[1;32m    260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdestpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnewline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    263\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/gavin/miniconda3/envs/cs229_project/lib/python2.7/site-packages/numpy/lib/_datasource.pyc\u001b[0m in \u001b[0;36mopen\u001b[0;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[1;32m    616\u001b[0m                                       encoding=encoding, newline=newline)\n\u001b[1;32m    617\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 618\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s not found.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    619\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: train_test/label_train.txt not found."
-     ]
-    }
-   ],
-   "source": [
-    "Y_train_1hot = np.loadtxt('train_test/label_train.txt')\n",
-    "Y_test_1hot = np.loadtxt('train_test/label_test.txt')\n",
-    "print Y_train_1hot.shape, Y_test_1hot.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(700,) (300,)\n"
+      "(400, 5) (100, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Y_train_1hot = np.loadtxt('data/Y_train.txt')\n",
+    "Y_test_1hot = np.loadtxt('data/Y_test.txt')\n",
+    "print Y_train_1hot.shape, Y_test_1hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(400,) (100,)\n"
      ]
     }
    ],
@@ -80,20 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(700, 25800) (300, 25800)\n"
+      "(400, 25800) (100, 25800)\n"
      ]
     }
    ],
    "source": [
-    "X_flatten_train = np.load('train_test/X_train.npy').reshape(Y_train.shape[0],-1)\n",
-    "X_flatten_test = np.load('train_test/X_test.npy').reshape(Y_test.shape[0],-1)\n",
+    "X_flatten_train = np.load('data/X_train.npy').reshape(Y_train.shape[0],-1)\n",
+    "X_flatten_test = np.load('data/X_test.npy').reshape(Y_test.shape[0],-1)\n",
     "print X_flatten_train.shape, X_flatten_test.shape"
    ]
   },
@@ -101,14 +94,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. SVM"
+    "## Using SVM on the raw input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training SVM for flattened raw matrices ...\n",
+      "\t# of Misclassification: 77\n",
+      "\tTrain accuracy: 1.0\n",
+      "\tTest accuracy: 0.23\n"
+     ]
+    }
+   ],
    "source": [
     "print 'Training SVM for flattened raw matrices ...'\n",
     "clf = svm.SVC(gamma='scale').fit(X_flatten_train, Y_train)\n",
@@ -116,6 +122,85 @@
     "error = sum([1 for i in range(len(Y_test)) if Y_test[i] != Y_pred[i]])\n",
     "train_error = clf.score(X_flatten_train, Y_train)\n",
     "test_error = clf.score(X_flatten_test, Y_test)\n",
+    "\n",
+    "print '\\t# of Misclassification: %s' % str(error)\n",
+    "print '\\tTrain accuracy: %s' % str(train_error)\n",
+    "print '\\tTest accuracy: %s' % str(test_error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using SVM on a hidden layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training SVM for flattened raw matrices ...\n",
+      "\t# of Misclassification: 22\n",
+      "\tTrain accuracy: 0.8425\n",
+      "\tTest accuracy: 0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'Training SVM for conv_1 layers ...'\n",
+    "\n",
+    "mat_path = 'data'\n",
+    "name = 'conv_1'\n",
+    "\n",
+    "X_train_hidden1 = np.loadtxt(os.path.join(mat_path, name+'_train.txt'))\n",
+    "X_test_hidden2 = np.loadtxt(os.path.join(mat_path, name+'_test.txt'))\n",
+    "\n",
+    "clf = svm.SVC(gamma='scale').fit(X_train_hidden1, Y_train)\n",
+    "Y_pred = clf.predict(X_test_hidden2)\n",
+    "error = sum([1 for i in range(len(Y_test)) if Y_test[i] != Y_pred[i]])\n",
+    "train_error = clf.score(X_train_hidden1, Y_train)\n",
+    "test_error = clf.score(X_test_hidden2, Y_test)\n",
+    "\n",
+    "print '\\t# of Misclassification: %s' % str(error)\n",
+    "print '\\tTrain accuracy: %s' % str(train_error)\n",
+    "print '\\tTest accuracy: %s' % str(test_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training SVM for conv_2 ...\n",
+      "\t# of Misclassification: 21\n",
+      "\tTrain accuracy: 0.8425\n",
+      "\tTest accuracy: 0.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'Training SVM for conv_2 ...'\n",
+    "\n",
+    "mat_path = 'data'\n",
+    "name = 'conv_2'\n",
+    "\n",
+    "X_train_hidden1 = np.loadtxt(os.path.join(mat_path, name+'_train.txt'))\n",
+    "X_test_hidden2 = np.loadtxt(os.path.join(mat_path, name+'_test.txt'))\n",
+    "\n",
+    "clf = svm.SVC(gamma='scale').fit(X_train_hidden1, Y_train)\n",
+    "Y_pred = clf.predict(X_test_hidden2)\n",
+    "error = sum([1 for i in range(len(Y_test)) if Y_test[i] != Y_pred[i]])\n",
+    "train_error = clf.score(X_train_hidden1, Y_train)\n",
+    "test_error = clf.score(X_test_hidden2, Y_test)\n",
     "\n",
     "print '\\t# of Misclassification: %s' % str(error)\n",
     "print '\\tTrain accuracy: %s' % str(train_error)\n",
