--- a/Haojun_Preprocessing.ipynb
+++ b/Haojun_Preprocessing.ipynb
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12969d198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20829d17b38>"
       ]
      },
      "execution_count": 3,
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12d14e278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20829db1400>"
       ]
      },
      "execution_count": 4,
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,12 +155,12 @@
     "        print(\"More than 1 length of music returned {0}\".format(len_set))\n",
     "    return np.array(result)\n",
     "\n",
-    "# rocks = transform_musics('genres/rock/')"
+    "rocks = transform_musics('genres/rock/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,28 +181,28 @@
    "source": [
     "### Processing all Music\n",
     "\n",
-    "Now we will define functions that process the entire music library and generate the X and Y."
+    "Now we will define functions that process the entire music library and generate the X and Y. Here we are only selecting classical, hiphop, metal, pop, and blues as our 5 classes to classify."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing genre pop\n",
-      "processing genre metal\n",
-      "processing genre disco\n",
       "processing genre blues\n",
-      "processing genre reggae\n",
       "processing genre classical\n",
-      "processing genre rock\n",
-      "processing genre hiphop\n",
       "processing genre country\n",
-      "processing genre jazz\n"
+      "processing genre disco\n",
+      "processing genre hiphop\n",
+      "processing genre jazz\n",
+      "processing genre metal\n",
+      "processing genre pop\n",
+      "processing genre reggae\n",
+      "processing genre rock\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
