add raw pca features

--- a/after_cnn_classic-Copy1.ipynb
+++ b/after_cnn_classic-Copy1.ipynb
@@ -95,6 +95,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(400, 50) (100, 50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca_conv = PCA(50)\n",
+    "pca_conv.fit(X_flatten_train)\n",
+    "train_pca = pca_conv.transform(X_flatten_train)\n",
+    "test_pca = pca_conv.transform(X_flatten_test)\n",
+    "print train_pca.shape, test_pca.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = svm.SVC(gamma='scale').fit(train_pca, Y_train)\n",
+    "Y_pred = clf.predict(test_pca)\n",
+    "error = sum([1 for i in range(len(Y_test)) if Y_test[i] != Y_pred[i]])\n",
+    "train_error = clf.score(train_pca, Y_train)\n",
+    "test_error = clf.score(test_pca, Y_test)\n",
+    "\n",
+    "print '\\t# of Misclassification: %s' % str(error)\n",
+    "print '\\tTrain accuracy: %s' % str(train_error)\n",
+    "print '\\tTest accuracy: %s' % str(test_error)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
