add pca reduced raw models for all classification

--- a/after_cnn_classic-Copy1.ipynb
+++ b/after_cnn_classic-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +95,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA reduced features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -117,9 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t# of Misclassification: 79\n",
+      "\tTrain accuracy: 1.0\n",
+      "\tTest accuracy: 0.21\n"
+     ]
+    }
+   ],
    "source": [
     "clf = svm.SVC(gamma='scale').fit(train_pca, Y_train)\n",
     "Y_pred = clf.predict(test_pca)\n",
@@ -128,6 +145,91 @@
     "test_error = clf.score(test_pca, Y_test)\n",
     "\n",
     "print '\\t# of Misclassification: %s' % str(error)\n",
+    "print '\\tTrain accuracy: %s' % str(train_error)\n",
+    "print '\\tTest accuracy: %s' % str(test_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t# of Misclassification: 19\n",
+      "\tTrain accuracy: 0.925\n",
+      "\tTest accuracy: 0.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(random_state=0, solver='newton-cg').fit(train_pca, Y_train)\n",
+    "Y_pred = lr.predict(test_pca)\n",
+    "Y_train_pred = lr.predict(train_pca)\n",
+    "error = sum([1 for i in range(len(Y_test)) if Y_test[i] != Y_pred[i]])\n",
+    "train_error = lr.score(train_pca, Y_train)\n",
+    "test_error = lr.score(test_pca, Y_test)\n",
+    "\n",
+    "# train_error = skmetrics.precision_score(train_pca, Y_train_pred, average='micro') \n",
+    "# test_error = skmetrics.precision_score(test_pca, Y_pred, average='micro') \n",
+    "\n",
+    "print '\\t# of Misclassification: %s' % str(error)\n",
+    "print '\\tTrain accuracy: %s' % str(train_error)\n",
+    "print '\\tTest accuracy: %s' % str(test_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tTrain accuracy: 0.84\n",
+      "\tTest accuracy: 0.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = train_pca\n",
+    "X_test = test_pca\n",
+    "\n",
+    "gda = LinearDiscriminantAnalysis().fit(X_train, Y_train)\n",
+    "Y_pred = gda.predict(X_test)\n",
+    "train_error = gda.score(X_train, Y_train)\n",
+    "test_error = gda.score(X_test, Y_test)\n",
+    "\n",
+    "print '\\tTrain accuracy: %s' % str(train_error)\n",
+    "print '\\tTest accuracy: %s' % str(test_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tTrain accuracy: 1.0\n",
+      "\tTest accuracy: 0.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = train_pca\n",
+    "X_test = test_pca\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=200, max_depth=20, random_state=0).fit(X_train, Y_train)\n",
+    "Y_pred = clf.predict(X_test)\n",
+    "train_error = clf.score(X_train, Y_train)\n",
+    "test_error = clf.score(X_test, Y_test)\n",
+    "\n",
     "print '\\tTrain accuracy: %s' % str(train_error)\n",
     "print '\\tTest accuracy: %s' % str(test_error)"
    ]
@@ -187,9 +289,10 @@
      "output_type": "stream",
      "text": [
       "Training SVM for conv_1 layers ...\n",
-      "\t# of Misclassification: 16\n",
-      "\tTrain accuracy: 0.9375\n",
-      "\tTest accuracy: 0.84\n"
+      "(400, 320)\n",
+      "\t# of Misclassification: 18\n",
+      "\tTrain accuracy: 0.945\n",
+      "\tTest accuracy: 0.82\n"
      ]
     }
    ],
@@ -201,6 +304,7 @@
     "\n",
     "X_train_hidden1 = np.loadtxt(os.path.join(mat_path, name+'_train.txt'))\n",
     "X_test_hidden1 = np.loadtxt(os.path.join(mat_path, name+'_test.txt'))\n",
+    "print X_train_hidden1.shape\n",
     "\n",
     "clf = svm.SVC(gamma='scale').fit(X_train_hidden1, Y_train)\n",
     "Y_pred = clf.predict(X_test_hidden1)\n",
@@ -223,9 +327,10 @@
      "output_type": "stream",
      "text": [
       "Training SVM for conv_2 ...\n",
-      "\t# of Misclassification: 13\n",
-      "\tTrain accuracy: 0.92\n",
-      "\tTest accuracy: 0.87\n"
+      "(400, 48)\n",
+      "\t# of Misclassification: 16\n",
+      "\tTrain accuracy: 0.95\n",
+      "\tTest accuracy: 0.84\n"
      ]
     }
    ],
@@ -237,6 +342,7 @@
     "\n",
     "X_train_hidden2 = np.loadtxt(os.path.join(mat_path, name+'_train.txt'))\n",
     "X_test_hidden2 = np.loadtxt(os.path.join(mat_path, name+'_test.txt'))\n",
+    "print X_train_hidden2.shape\n",
     "\n",
     "clf = svm.SVC(gamma='scale').fit(X_train_hidden2, Y_train)\n",
     "Y_pred = clf.predict(X_test_hidden2)\n",
